@@ -4,6 +4,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        '8292d12740530ab085118ab48ddf07ed',
         '9d3b8e2325a2b4f3cd9e76d0823714fe',
         'f2226634cbaba5a7a9c6933691691143',
         'sentinel'
