@@ -1,4 +1,5 @@
 bad_md5 = [
+        '79307b17d2301ad69bba2b6d29d24168',
         'c67d411560cb9e226df5029417089368',
         'sentinel'
 ]
