@@ -5,6 +5,7 @@ bad_md5 = [
 good_md5 = [
         '08e34654dfc51ad18ada4d610de0024e',
         '5076802214a82a6385ccd7fbf87d1361',
+        '6de8ec59190338e1fcf3355a5c635e87',
         'd4c1daef6f239c6aaf61b4388f68ac16',
         'sentinel'
 ]
