@@ -4,6 +4,7 @@ bad_md5 = [
 
 good_md5 = [
         '4542fab3fac2e16c23cef40bda899b7f',
+        '8cdc0c9f3270163ee339659c4d628987',
         'sentinel'
 ]
 
