@@ -5,6 +5,7 @@ bad_md5 = [
 
 good_md5 = [
         '1cf4da651c6bbeb8c62eafe986ae17eb',
+        'ce7ab98896d28dc739afbb4523bfc486',
         'sentinel'
 ]
 
