@@ -4,6 +4,7 @@ bad_md5 = [
 
 good_md5 = [
         'c8b6075e5429f6e568c1aa483cfc6a33',
+        'e939229ce80f5b582e34fa28bc425e14',
         'sentinel'
 ]
 
